--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,20 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 *.gitignore filter=lfs diff=lfs merge=lfs -text
+*.vsidx filter=lfs diff=lfs merge=lfs -text
+*.suo filter=lfs diff=lfs merge=lfs -text
+*.db filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
+*.ipch filter=lfs diff=lfs merge=lfs -text
+*.idb filter=lfs diff=lfs merge=lfs -text
+*.pdb filter=lfs diff=lfs merge=lfs -text
+*.tlog filter=lfs diff=lfs merge=lfs -text
+*.lastbuildstate filter=lfs diff=lfs merge=lfs -text
+*.recipe filter=lfs diff=lfs merge=lfs -text
+*.ilk filter=lfs diff=lfs merge=lfs -text
+*.log filter=lfs diff=lfs merge=lfs -text
+*.cpp filter=lfs diff=lfs merge=lfs -text
+*.sln filter=lfs diff=lfs merge=lfs -text
+*.vcxproj filter=lfs diff=lfs merge=lfs -text
+*.filters filter=lfs diff=lfs merge=lfs -text
+*.user filter=lfs diff=lfs merge=lfs -text
