--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+*.cpp filter=lfs diff=lfs merge=lfs -text
+*.csh filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.vsidx filter=lfs diff=lfs merge=lfs -text
 *.suo filter=lfs diff=lfs merge=lfs -text
@@ -13,7 +15,6 @@
 *.recipe filter=lfs diff=lfs merge=lfs -text
 *.ilk filter=lfs diff=lfs merge=lfs -text
 *.log filter=lfs diff=lfs merge=lfs -text
-*.cpp filter=lfs diff=lfs merge=lfs -text
 *.sln filter=lfs diff=lfs merge=lfs -text
 *.vcxproj filter=lfs diff=lfs merge=lfs -text
 *.filters filter=lfs diff=lfs merge=lfs -text
